--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <!-- класс k_imageblock для обозначения блока картинок-->
                 <div class="k_blockone">
                 <!-- класс k_blockone для обозначения первого блока картинок-->
-                    <img src="/img/cakesone.png" alt="кекс1" class="k_imgone">
+                    <img src="/cakesone.png" alt="кекс1" class="k_imgone">
                     <img src="/img/cakestwo.png" alt="кекс2" class="k_imgtwo">
                     <img src="/img/cakesthree.png" alt="кекс3" class="k_imgthree">
                 </div>
@@ -107,4 +107,5 @@
         </form>
         <script src="/index/index.js"></script>
 </body>
+
 </html>
