--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <!-- класс k_imageblock для обозначения блока картинок-->
                 <div class="k_blockone">
                 <!-- класс k_blockone для обозначения первого блока картинок-->
-                    <img src="/cakesone.png" alt="кекс1" class="k_imgone">
+                    <img src="/img/cakesone.png" alt="кекс1" class="k_imgone">
                     <img src="/img/cakestwo.png" alt="кекс2" class="k_imgtwo">
                     <img src="/img/cakesthree.png" alt="кекс3" class="k_imgthree">
                 </div>
@@ -109,3 +109,4 @@
 </body>
 
 </html>
+
