--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <!-- класс k_imageblock для обозначения блока картинок-->
                 <div class="k_blockone">
                 <!-- класс k_blockone для обозначения первого блока картинок-->
-                    <img src="/img/cakesone.png" alt="кекс1" class="k_imgone">
-                    <img src="/img/cakestwo.png" alt="кекс2" class="k_imgtwo">
-                    <img src="/img/cakesthree.png" alt="кекс3" class="k_imgthree">
+                    <img src="/../img/cakesone.png" alt="кекс1" class="k_imgone">
+                    <img src="/../img/cakestwo.png" alt="кекс2" class="k_imgtwo">
+                    <img src="/../img/cakesthree.png" alt="кекс3" class="k_imgthree">
                 </div>
                 <div class="k_blocktwo">
                     <img src="/img/cakesfour.png" alt="кекс4" class="k_imgfour">
@@ -109,4 +109,5 @@
 </body>
 
 </html>
+
 
